--- a/style.css
+++ b/style.css
@@ -18,34 +18,64 @@ body {
         'header'
         'main'
         'footer';
-    width: 1024px;
+    max-width: 1024px;
     margin: 0 auto;
     padding: 0 5px;
 }
+
 li {
     margin-left: 10%;
- }
+}
+
 p {
     text-align: justify;
- }
+}
 
 th {
     text-align: right;
     vertical-align: bottom;
 }
-main {
-    display: grid;
-    grid-area: main;
-    grid-template-columns: auto;
-    grid-template-rows: auto;
-    grid-template-areas: 
-    'aside'
-    'article'
-    'aside';
+
+header, main, footer {
     border: 1px solid #ccc7c8;
     border-radius: 5px;
     padding: 0 5px;
+    background: #fff;
 }
+
+main {
+    display: grid;
+    grid-area: main;
+    /* grid-template-columns: auto;
+    grid-template-rows: auto; */
+}
+
+/*1 col*/
+main.one-col {
+    grid-template-areas:
+        "left-cell"
+        "article-cell"
+        "right-cell";
+}
+
+/*2 left cols*/
+main.two-cols-left {
+    grid-template-areas: "left-cell article-cell";
+    grid-template-columns: 1fr 3fr;
+}
+
+/*2 right col*/
+main.two-cols-right {
+    grid-template-areas: "article-cell right-cell";
+    grid-template-columns: 3fr 1fr;
+}
+
+/*3 cols*/
+main.three-cols {
+    grid-template-areas: "left-cell article-cell right-cell";
+    grid-template-columns: 1fr 3fr 1fr;
+}
+
 aside {
     margin: 2px;
     padding: 5px;
@@ -54,11 +84,24 @@ aside {
 header {
     grid-area: header;
     background-image: url(images/header.png);
-    border: 1px solid #ccc7c8;
-    border-radius: 5px;
-    padding: 0 5px;
     margin-bottom: 2px;
 }
+
+/*------------------ form ------------------*/
+
+form .fa-solid {
+    background-color: #cddc39;
+    color: #fff;
+    padding: 5px 10px;
+    width: 40px;
+    text-align: center;
+}
+
+form input {
+    padding: 5px;
+    font-size: 17px;
+}
+
 
 
 /*------------------ header img fly ------------------*/
@@ -94,6 +137,7 @@ header .header-img3 {
     from {
         left: 80%;
     }
+
     to {
         left: 30%;
     }
@@ -103,6 +147,7 @@ header .header-img3 {
     from {
         left: 80%;
     }
+
     to {
         left: 45%;
     }
@@ -112,6 +157,7 @@ header .header-img3 {
     from {
         left: 80%;
     }
+
     to {
         left: 63%;
     }
@@ -123,10 +169,12 @@ header .header-img3 {
     display: flex;
     justify-content: space-between;
 }
+
 nav {
     display: flex;
     margin-top: 20px;
 }
+
 nav a {
     margin: 3px;
     padding: 2px 4px;
@@ -154,10 +202,13 @@ nav a:hover {
 .search_and_cart {
     margin-top: 20px;
     padding-top: 3px;
+    display: flex;
+    gap: 5px;
 }
 
 .search_and_cart input {
     font-size: 17px;
+    padding: 0;
 }
 
 .search_and_cart .fa-magnifying-glass {
@@ -174,15 +225,20 @@ nav a:hover {
     padding: 4px;
     color: #ed4190;
     background-color: #cddc39;
+    /* padding: 5px 10px; */
+    width: 40px;
+    text-align: center;
+    margin-bottom: 5px;
 }
 
 .search_and_cart .fa-cart-shopping:hover {
     cursor: pointer;
 }
+
 /* ------------------ article ------------------ */
 article {
     display: grid;
-    grid-template-rows: auto;
+    grid-area: article-cell;
 }
 
 h1 {
@@ -198,6 +254,7 @@ h1 {
     justify-content: center;
     align-items: end;
 }
+
 h1::after {
     position: absolute;
     /* margin: 12px 16px; */
@@ -227,6 +284,7 @@ h3 {
     color: #f90B6D;
     font-size: 20px;
 }
+
 /* ------------------ Gioi thieu ------------------ */
 section .Gioi_thieu {
     padding: 0 5px;
@@ -259,9 +317,10 @@ section .Gioi_thieu.loai2 video {
     column-count: 2;
 }
 
-#hd_lam_sua_chua h3{
+#hd_lam_sua_chua h3 {
     break-before: column;
 }
+
 /* ------------------ order ------------------- */
 
 .order_container {
@@ -282,7 +341,7 @@ section .Gioi_thieu.loai2 video {
     align-items: center;
 }
 
-.order_item img{
+.order_item img {
     width: 30%;
 }
 
@@ -290,9 +349,6 @@ section .Gioi_thieu.loai2 video {
 footer {
     grid-area: footer;
     display: flex;
-    border: 1px solid #ccc7c8;
-    border-radius: 5px;
-    padding: 0 5px;
     margin-top: 2px;
     justify-content: center;
 }
@@ -305,6 +361,7 @@ footer p {
 footer .fa-brands {
     padding: 15px 5px;
 }
+
 #top-link {
     padding: 10px;
     margin: 0 10px 5px 0;
@@ -313,6 +370,7 @@ footer .fa-brands {
     right: 25px;
     z-index: 100;
 }
+
 #top-link img {
     width: 70px;
 }
@@ -338,14 +396,15 @@ section div.san_pham {
     flex-direction: column;
     margin: 4px;
     padding: 10px;
-    border: solid 1px #bdb7d9 ;
+    border: solid 1px #bdb7d9;
     border-radius: 5px;
     width: 100%;
     color: #000;
     text-align: justify;
-    background: linear-gradient(to top,#cddc39 0%, rgba(0, 0, 0, 0) 10%);
+    background: linear-gradient(to top, #cddc39 0%, rgba(0, 0, 0, 0) 10%);
 
 }
+
 section div.san_pham h2 {
     align-self: center;
 }
@@ -364,37 +423,28 @@ span.soluong {
     /* position: fixed; */
     /* display: flex; */
     /* color: #ed4190; */
-    align-self: center;    
+    align-self: center;
 }
 
 /* ------------------------- gioi thieu page --------------------------- */
 
-main#gioi_thieu_page {
-    grid-area: main;
-    display: grid;
-    grid-template-rows: auto;
-    grid-template-columns: 3fr 1fr;
-    grid-template-areas: 
-    'article aside';
-    border: 1px solid #ccc7c8;
-    border-radius: 5px;
-    padding: 0 5px;
-}
 
 article#gioi_thieu_article {
     /* all:unset; */
     display: inline-block;
-    grid-area: article;
+    grid-area: article-cell;
 }
+
 article#gioi_thieu_article img {
     width: 750px;
 }
 
 aside#gioi_thieu_aside {
-    grid-area: aside;
+    grid-area: right-cell;
     text-align: center;
 
 }
+
 /* ------------------------- lien he page --------------------------- */
 
 #lienhe_page {
@@ -429,37 +479,22 @@ aside#gioi_thieu_aside {
     font-weight: 500;
 }
 
-form .fa-solid {
-    background-color: #cddc39;
-    color: #fff;
-    padding: 5px 10px;
-    width: 40px;
-    text-align: center;
-}
-form input {
-    padding: 5px;
-    font-size: 17px;
-}
 
 
 /* ------------------------- tin tuc page --------------------------- */
 main#tintuc_page {
-    grid-area: main;
-    display: grid;
-    grid-template-areas: 
-    'aside article';
     grid-template-rows: repeat(100, auto);
-    grid-template-columns: 1fr 3fr;
-    border: 1px solid #ccc7c8;
-    border-radius: 5px;
-    padding: 0 5px;
+
+
 }
 
-main#tintuc_page img{
+main#tintuc_page img {
     width: 100%;
 }
 
 main#tintuc_page article {
+    grid-area: auto;
+
     grid-column: 2 / span;
 }
 
@@ -468,6 +503,7 @@ main#tintuc_page article .content_container {
 }
 
 main#tintuc_page aside {
+    grid-area: left-cell;
     grid-column: 1 / span;
     grid-row: 1 / -1;
 }
@@ -498,6 +534,6 @@ main#dangnhap_page {
     justify-content: center;
 }
 
-main#dangnhap_page img{
+main#dangnhap_page img {
     max-width: 250px;
 }
